Add app sample and finish tests